--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
     "devDependencies": {
-        "@popperjs/core": "^2.10.1",
-        "@symfony/webpack-encore": "^1.0.0",
-        "bootstrap": "^5.1.0",
+        "@hotwired/stimulus": "^3.0.0",
+        "@symfony/stimulus-bridge": "^3.0.0",
+        "@symfony/webpack-encore": "^2.0.0",
         "core-js": "^3.0.0",
-        "jquery": "^3.6.0",
         "regenerator-runtime": "^0.13.2",
-        "sass": "^1.39.0",
-        "sass-loader": "^12.1.0",
+        "sass": "^1.52.3",
+        "sass-loader": "^12.6.0",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
@@ -17,5 +16,10 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@popperjs/core": "^2.11.5",
+        "bootstrap": "^5.1.3",
+        "jquery": "^3.6.0"
     }
 }
